[package]
name = "spi-wrapper"
version = "0.0.3"
authors = ["Nicholas Chen <nixholas@icloud.com>"]
edition = "2018"
description = "The Solana Program Indexing Wrapper based on Solana FM's indexing infrastructure."
readme = "README.md"
homepage = "https://docs.solana.fm/"
repository = "https://github.com/nozomi-ai/spi-wrapper"
keywords = ["solana", "wrapper"]

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
base64 = "0.13.0"
bincode = "1.3.3"
hex = "0.4.3"
libsecp256k1 = "0.5.0"
proptest = "1.0.0"
serde = "1.0.130"
serde_json = "1.0.68"
serum_dex = "0.4.0"
sha3 = "0.9.1"
solana-account-decoder = "1.7.12"
solana-config-program = "1.7.12"
solana-program = "1.7.12"
solana-sdk = "1.7.12"
#solana-stake-program = "=1.7.10"
solana-transaction-status = "1.7.12"
solana-vote-program = "1.7.12"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-lending = { path = "submodules/solana-program-library/token-lending/program", version = "=0.1.0", features = ["no-entrypoint"]}
spl-token-swap = "2.1.0"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1.5"
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
uint = "0.9.1"