[package]
name = "spi-wrapper"
version = "0.1.5"
authors = ["Nicholas Chen <nixholas@icloud.com>"]
edition = "2018"
description = "The Solana Program Indexing Wrapper based on Solana FM's indexing infrastructure."
readme = "README.md"
homepage = "https://docs.solana.fm/"
repository = "https://github.com/nozomi-ai/spi-wrapper"
keywords = ["solana", "wrapper"]

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
borsh = "0.9.3"
bs58 = "0.4.0"
base64 = "0.13.0"
bincode = "1.3.3"
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
libsecp256k1 = "0.5.0"
mpl-auction = { path = "submodules/metaplex-program-library/auction/program", version = "0.0.1" }
mpl-auction-house = { path = "submodules/metaplex-program-library/auction-house/program", version = "0.1.0" }
mpl-candy-machine = "2.0.1"
mpl-metaplex = { path = "submodules/metaplex-program-library/metaplex/program", version = "0.0.1" }
mpl-token-metadata = "1.2.3"
mpl-token-vault = "0.1.0"
proptest = "1.0.0"
serde = "1.0.130"
serde_json = "1.0.68"
#serum_dex = "0.5.0"
serum_dex = { path = "submodules/serum-dex/dex", version = "0.5.4" }
sha3 = "0.9.1"
solana-account-decoder = "1.8.14"
solana-config-program = "1.8.14"
solana-program = "1.8.14"
solana-sdk = "1.8.14"
#solana-stake-program = "=1.7.10"
solana-transaction-status = "1.8.14"
solana-vote-program = "1.8.14"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-lending = { path = "submodules/solana-program-library/token-lending/program", version = "=0.1.0", features = ["no-entrypoint"]}
spl-token-swap = "2.1.0"
step-token-swap = { path = "submodules/step-program-library/token-swap/program", package = "spl-token-swap" }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1.5"
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
uint = "0.9.1"
#zeta-sdk = {path = "submodules/zeta-sdk", version = "0.9.1"}
vault = { path = "submodules/zeta-fuze/vault/programs/vault", version = "0.1.0" }
raydium-contract-instructions = {path = "submodules/raydium-contract-instructions", version = "0.1.0"}
